--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   db:
     image: postgres
+    network_mode: host
+    ports:
+      - "0.0.0.0:5432:5432"
     volumes:
       - postgres_db:/var/lib/postgresql/data
     environment:
